# dialogos-python

./: README.md  setup.cfg
dialogos/: __init__.py
docs/: dialogos.html  index.html  search.js
examples/: check.py  end.py  hello.py  info.py  label.py  menu.py  procedure.py  procedures.py  story.py  sub_optimal_story.py  variable.py
scripts/: check  clean  fmt  fmt.sh  run.sh  test  tp
src/: dialogos.py  example1.py  example2.py  example3.py  example4.py  example5.py  example6.py
tests/: test_dialogos.py
