[metadata]
name = dialogos
version = 1.0.0
author = Alexandros F. G. Kapretsos
author_email = alexandroskapretsos@gmail.com
description =  A super simple dialogue system for Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AlexandrosKap/dialogos-python
project_urls =
    Bug Tracker = https://github.com/AlexandrosKap/dialogos-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = true
python_requires = >=3.6