[metadata]
name = dialogos
description =  A super simple dialogue system for Python.
author = Alexandros F. G. Kapretsos
author_email = alexandroskapretsos@gmail.com
license = MIT
version = 0.1.0
url = https://github.com/AlexandrosKap/dialogos-python
project_urls =
    Bug Tracker = https://github.com/AlexandrosKap/dialogos-python/issues
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = true
